# kore-client

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/database/: leveldb.rs
client/src/http/: doc.rs  mod.rs
client/src/http/api/: bodys.rs  error.rs  handlers.rs  mod.rs  querys.rs  responses.rs
client/src/kore/: mod.rs
client/src/settings/: client.rs  error.rs  kore.rs  mod.rs
client/tests/: basic.rs
tools/keygen/src/: main.rs
tools/sign/src/: main.rs
